ui: make TreeStatus more visible on jobs and stack pages (bug 2025629) r=sheehan
 * ui: don't show empty parens for empty treestatus reason (bug 2025629)
 * jinja: add totreestatusbadgeclass filter to make statuses more visible (bug 2025629)
 * utils: extract get_treestatus_data from LandingJobView
 * ui: show TreeStatus badge on embedded jobs (bug 2025629)
 * css: make inline \`code\` more neutral
 * treestatus: use TreeData when passing tree data for display
 * tests: include all mandatory fields in TreeStatusDouble.get_tree

Pull request: https://github.com/mozilla-conduit/lando/pull/1009

--- a/src/lando/static_src/legacy/css/lando.scss
+++ b/src/lando/static_src/legacy/css/lando.scss
@@ -35,6 +35,10 @@
   --bulma-info-invert-l: 100%;     // White text on info turquoise
   --bulma-link-invert-l: 100%;     // White text on link blue
 
+  // Make inline code more neutral.
+  --bulma-code-background: var(--bulma-background);
+  --bulma-code: var(--bulma-text);
+
   // Mozilla typography
   --bulma-family-primary: 'Fira Sans', Arial, Helvetica, sans-serif;
   --bulma-family-code: 'Fira Mono', monospace;
